tests/spec/libsass_closed_issues/issue_1169/error/color.rs
//! Tests auto-converted from "sass-spec/spec/libsass-closed-issues/issue_1169/error/color.hrx"

// Ignoring "test", error tests are not supported yet.
